--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,13 @@
 {% extends "layout.html" %}
 {% block body %}
+  <div>
   <form action="{{ url_for('add_url') }}" method="post" class="add-url">
     <dl>
-      <dt>Go Short URL:
-      <dd><input type="text" size="30" name="shorturl">
+      <dt>go/alias:
+      <dd><input type="text" size="30" name="shorturl" placeholder="alias">
       <dt>Long URL to shorten:
-      <dd><input type="text" size="30" name="longurl">
+      <dd><input type="text" size="30" name="longurl" placeholder="http://">
       <dd><input type="submit" value="Submit">
     </dl>
+  </div>
 {% endblock %}
